[package]
resolver = "2"

name = "simulation"
version = "0.1.0"
authors = [
    "Bas van Driel <17137640@student.hhs.nl>",
]

[[bin]]
name = "simulation"

[dependencies]
rand = "0.8.5"
rayon = "1.5"
pixels = "0.9.0"
winit = "0.27"
winit_input_helper = "0.13"
env_logger = "0.9"
log = "0.4"


[dependencies.vecmath]
version = "1.0.0"
